--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="top">
         <h1><span>CODE</span> WALK</h1>
         <p>Code Walk is best plateform to learn Web-Development, So don't forget to join us.</p>
-        <button>SIGN UP</button>
+        <button>REGISTER</button>
       </div>
       <div class="bottom">
         <img id="coder-image" src="./coder.jpg" alt="">
