Adding SIGN-UP page.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="top">
         <h1><span>CODE</span> WALK</h1>
         <p>Code Walk is best plateform to learn Web-Development, So don't forget to join us.</p>
-        <a href = "https://forms.gle/QhXPrJiU8GaAP74o6" target = "_blank"><button>SIGN UP</button></a>
+        <a href = "https://forms.gle/tpwNqw6MzfhBJJT36" target = "_blank"><button>SIGN UP</button></a>
       </div>
       <div class="bottom">
         <img id="coder-image" src="./coder.jpg" alt="">
