--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="header">
         <img id="logo" src="./logo.jpg" alt="My-web-logo" />
-        <i class="ri-menu-3-line" onclick=signUpFirst()></i>
+        <button onclick=singUpFirst() ><i class="ri-menu-3-line"></i></button>
       </div>
       <div class="top">
         <h1><span>CODE</span> WALK</h1>
